<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/introNombre"
        style="@style/textostyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:id="@+id/nombreet"
        android:background="@drawable/cuadrotexto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.145" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nivel"
        style="@style/textostyle"
        android:id="@+id/niveltx"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.3"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/niveles"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <RadioButton
            android:id="@+id/nivel1"
            android:paddingVertical="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lvlfacil"
            style="@style/textostyle"/>

        <RadioButton
            android:id="@+id/nivel2"
            android:paddingVertical="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lvlmid"
            style="@style/textostyle"/>

        <RadioButton
            android:id="@+id/nivel3"
            android:paddingVertical="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lvlhard"
            style="@style/textostyle"/>
    </RadioGroup>

    <Button
        android:id="@+id/jugarbt"
        android:text="@string/jugar"
        style="@style/estilobotones"
        android:clickable="true"
        android:onClick="openJuego"
        android:background="@drawable/jugarbt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintVertical_bias="0.9"/>

    <Button
        android:id="@+id/salirbt"
        android:text="@string/salir"
        style="@style/estilobotones"
        android:clickable="true"
        android:onClick="cerrarJuego"
        android:background="@drawable/salirbt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintVertical_bias="0.9"/>


</android.support.constraint.ConstraintLayout>